--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,4 @@ sysinfo.txt
 # Crashlytics generated file
 crashlytics-build.properties
 
+The Infinite Labyrinth/UserSettings/Layouts/default-2021.dwlt
